<resources>
    <string name="app_name">UnoLingo</string>

    <!--Menu strings-->
    <string name="tab_learn">Learn</string>
    <string name="tab_words">Words</string>
    <string name="tab_me">Me</string>

    <!--Word tab strings-->
    <string name="fab_content_desc">Add a new word</string>
    <string name="add_word_bottom_sheet_title">Add a word</string>
    <string name="add_word_word_label">Word</string>
    <string name="add_word_translation_label">Translation</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="item_added_toast">Word added successfully</string>
    <string name="item_removed_toast">Word removed successfully</string>

    <string name="card_correct">Correct! 🎉</string>

    <!--Me tab strings-->
    <string name="statistics_section_title">Statistics</string>
    <string name="statistics_words_to_improve_section_title">Words to improve</string>

    <string name="statistics_item_streak">Current streak</string>
    <string name="statistics_item_streak_emoji">🔥</string>

    <string name="statistics_item_correct">Correct answers</string>
    <string name="statistics_item_correct_emoji">📈</string>

    <string name="statistics_item_level">Level</string>
    <string name="statistics_item_level_emoji">🔢</string>

    <string name="statistics_item_xp">XP</string>
    <string name="statistics_item_xp_emoji">⚔️</string>

    <string name="statistics_xp_to_next_level">XP to next level: %1$d</string>

    <!--Onboarding strings-->
    <string name="onboarding_title">Hello 👋</string>
    <string name="oboarding_name_question">What\'s your name?</string>
    <string name="onboarding_name_hint">Name</string>
    <string name="onboarding_button">Continue</string>
    <string name="onboarding_greeting">Welcome, %1$s!</string>
    <string name="onboarding_greeting_subtitle">Let\'s learn Spanish!</string>
    <string name="onboarding_greeting_button">Let\'s go!</string>

    <!--Preference key strings-->
    <string name="preference_name">name</string>
</resources>